@@ -1,3 +1,8 @@
+2017-10-11 Riccardo Mottola <rm@gnu.org>
+
+	* DBSoap.m (queryAll)
+	Format Objects after describes
+
 2017-10-10 Riccardo Mottola <rm@gnu.org>
 
 	* DBHTMLWriter.m
